added some initial css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="" alt="avtar">
+    <img src="https://cdn2.iconfinder.com/data/icons/professional-avatar-9/64/38-512.png" height = "300px" alt="avtar">
     <h2>About Me</h2>
     <p>
     <ul>
@@ -35,11 +35,9 @@
     </ol>
 
     <h2>Connect With Me</h2>
-    <ol>
-        <li><a href="google.com">linked in</a></li>
-        <li><a href="google.com">linked in</a></li>
-        <li><a href="google.com">linked in</a></li>
-    </ol>
+        <a href="https://github.com/meSangeet" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/900px-Octicons-mark-github.svg.png?20180806170715" height = "50px"alt=""></a>
+        <a href="https://twitter.com/me_sangeet" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/225px-Twitter-logo.svg.png" height = "50px" alt=""></a>
+        <a href="https://www.linkedin.com/in/sangeet-sharma-9960b1264/" target="_blank"><img src="https://scontent.fdel12-1.fna.fbcdn.net/v/t39.30808-6/277519684_10158675188522823_7436488509713286219_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ii8iJnT57mMAX_sO_CT&_nc_oc=AQl7cFSK2tFUiQlAIFnMkGr6KHzi6yYdJVe7Tbu3oB5KBok5MLh6EBDDFzhobwTWsuM&_nc_ht=scontent.fdel12-1.fna&oh=00_AfCWFR0sZt39yGdDyt1mvqYUM7iy2x2ZkqBxZ5QMSIaWKA&oe=64270EEB" height = "50px" alt=""></a>
     
 </body>
 
