added the typewriter effect on the homepage

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     <div class="intro">
         <img id="pf-img" src="https://cdn2.iconfinder.com/data/icons/professional-avatar-9/64/38-512.png" alt="avtar">
         <h1>Hi, I'm Sangeet</h1>
-        <h2>A Full Stack Web And Mobile App Developer</h2>
-        <a href="https://github.com/meSangeet" target="_blank"><img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/900px-Octicons-mark-github.svg.png?20180806170715"
-                height="50px" alt=""></a>
-        <a href="https://twitter.com/me_sangeet" target="_blank"><img
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/225px-Twitter-logo.svg.png"
-                height="50px" alt=""></a>
-        <a href="https://www.linkedin.com/in/sangeet-sharma-9960b1264/" target="_blank"><img
-                src="https://scontent.fdel12-1.fna.fbcdn.net/v/t39.30808-6/277519684_10158675188522823_7436488509713286219_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ii8iJnT57mMAX_sO_CT&_nc_oc=AQl7cFSK2tFUiQlAIFnMkGr6KHzi6yYdJVe7Tbu3oB5KBok5MLh6EBDDFzhobwTWsuM&_nc_ht=scontent.fdel12-1.fna&oh=00_AfCWFR0sZt39yGdDyt1mvqYUM7iy2x2ZkqBxZ5QMSIaWKA&oe=64270EEB"
-                height="50px" alt=""></a>
+        <div><span style="font-size: 2rem;" class="profession"></span><span style="font-size: 2rem;">|</span></div>
+        <div class="icons">
+            <a href="https://github.com/meSangeet" target="_blank"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/900px-Octicons-mark-github.svg.png?20180806170715"
+                    height="50px" alt=""></a>
+            <a href="https://twitter.com/me_sangeet" target="_blank"><img
+                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/225px-Twitter-logo.svg.png"
+                    height="50px" alt="twit logo"></a>
+            <a href="https://www.linkedin.com/in/sangeet-sharma-9960b1264/" target="_blank"><img
+                    src="https://scontent.fdel12-1.fna.fbcdn.net/v/t39.30808-6/277519684_10158675188522823_7436488509713286219_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ii8iJnT57mMAX_sO_CT&_nc_oc=AQl7cFSK2tFUiQlAIFnMkGr6KHzi6yYdJVe7Tbu3oB5KBok5MLh6EBDDFzhobwTWsuM&_nc_ht=scontent.fdel12-1.fna&oh=00_AfCWFR0sZt39yGdDyt1mvqYUM7iy2x2ZkqBxZ5QMSIaWKA&oe=64270EEB"
+                    height="50px" alt="linkedin"></a>
+        </div>
     </div>
     <div class="container">
         <div class="abt-me">
@@ -75,7 +77,7 @@
     <a href="https://www.linkedin.com/in/sangeet-sharma-9960b1264/" target="_blank"><img
             src="https://scontent.fdel12-1.fna.fbcdn.net/v/t39.30808-6/277519684_10158675188522823_7436488509713286219_n.jpg?_nc_cat=1&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=ii8iJnT57mMAX_sO_CT&_nc_oc=AQl7cFSK2tFUiQlAIFnMkGr6KHzi6yYdJVe7Tbu3oB5KBok5MLh6EBDDFzhobwTWsuM&_nc_ht=scontent.fdel12-1.fna&oh=00_AfCWFR0sZt39yGdDyt1mvqYUM7iy2x2ZkqBxZ5QMSIaWKA&oe=64270EEB"
             height="50px" alt=""></a>
-
+    <script src="typeWriter.js"></script>
 </body>
 
 </html>
